--- a/index.html
+++ b/index.html
@@ -4,12 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>scss esercitazione</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-
-
+    <nav>
+        <div class="container padding-inline-md">
+            <img src="assets/img/logo.svg" alt="" width="80px" >
+            <ul>
+                <li>home</li>
+                <li>about</li>
+                <li>servizi</li>
+            </ul>
+        </div>
+    </nav>
+    <header >
+        <div class="testo margin-inline-md margin-block-md"><h1>WELCOME</h1>
+            <p >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea, asperiores!</p>
+            <div class="margin-block-xl">
+                <button class="button-verde">scopri di più</button>
+                <button class="button-celeste margin-inline-md">accedi</button>
+                <button class="button-arancio">contattaci</button>
+            </div>
+        </div>
+        <div class="image">
+            
+        </div>
+    </header>
+    
 </body>
 </html>
